--- a/public/views/css/homework-2/css/style.css
+++ b/public/views/css/homework-2/css/style.css
@@ -37,12 +37,15 @@ footer {
 
 /* Your styles go below */
 * {
-  font-family: Arial;
   box-sizing: border-box;
 }
 
+body {
+  font-family: Arial;
+}
+
 .table tr td {
-  padding: 78px;
+  padding: 93px;
   border: 1px solid rgb(31, 30, 30)
 }
 
@@ -69,7 +72,7 @@ footer {
   margin: 24px 35px;
 }
 .form {
-  margin: 12px 22px;
+  margin: 30px 22px;
 }
 
 .form input {
@@ -79,9 +82,14 @@ footer {
 }
 
 .form button {
-  background-color: rgb(241, 229, 229);
+  background: none;
   font-weight: bold;
+  text-transform: uppercase;
+  border: 1px solid rgb(189, 184, 184);
   height: 21px;
+  font-size: 12px;
+  padding: 5px 7px 16px 8px;
+}
 }
 
 .form button:hover {
