--- a/public/views/css/homework-2/css/style.css
+++ b/public/views/css/homework-2/css/style.css
@@ -88,12 +88,12 @@ body {
   border: 1px solid rgb(189, 184, 184);
   height: 21px;
   font-size: 12px;
-  padding: 5px 7px 16px 8px;
-}
+  padding: 4px 7px 15px 8px;
 }
 
+
 .form button:hover {
-  border: 2px solid rgb(226, 19, 19)
+  border-color:  rgb(226, 19, 19);
 }
 
 header {
