--- a/public/views/css/homework-3/index.html
+++ b/public/views/css/homework-3/index.html
@@ -22,9 +22,9 @@
         <ul class="blocks">
           <li>
             <div class="block-top">
-              <a href="#">
+              <button>
                 <img src="images/1.png" alt="" />
-              </a>
+              </button>
               <img src="images/2.jpg" alt="" />
             </div> 
             <div class="block-bottom">
@@ -35,9 +35,9 @@
           </li>
           <li>
             <div class="block-top">
-              <a href="#">
-                <img src="images/1.png" alt="" />
-              </a>
+              <button>
+                  <img src="images/1.png" alt="" />
+              </button>
               <img src="images/2.jpg" alt="" />
             </div> 
             <div class="block-bottom">
@@ -48,9 +48,9 @@
           </li>
           <li>
             <div class="block-top">
-              <a href="#">
+              <button>
                 <img src="images/1.png" alt="" />
-              </a>
+              </button>
               <img src="images/2.jpg" alt="" />
             </div> 
             <div class="block-bottom">
@@ -61,9 +61,9 @@
           </li>
           <li>
             <div class="block-top">
-              <a href="#">
+              <button>
                 <img src="images/1.png" alt="" />
-              </a>
+              </button>
               <img src="images/2.jpg" alt="" />
             </div> 
             <div class="block-bottom">
@@ -74,9 +74,9 @@
           </li>
           <li>
             <div class="block-top">
-              <a href="#">
+              <button>
                 <img src="images/1.png" alt="" />
-              </a>
+              </button>
               <img src="images/2.jpg" alt="" />
             </div> 
             <div class="block-bottom">
@@ -87,9 +87,9 @@
           </li>
           <li>
             <div class="block-top">
-              <a href="#">
+              <button>
                 <img src="images/1.png" alt="" />
-              </a>
+              </button>
               <img src="images/2.jpg" alt="" />
             </div> 
             <div class="block-bottom">
