--- a/public/views/css/homework-3/css/style.css
+++ b/public/views/css/homework-3/css/style.css
@@ -47,8 +47,8 @@ footer {
 .nav a{
   color: white;
   display: inline-block;
-  width: 53px;
   text-align: center;
+  padding: 0 12px;
 }
 
 .nav a:hover {
@@ -59,7 +59,7 @@ footer {
   background-color: rgb(8, 0, 77);
 }
 
- .active {
+.active:hover {
   text-decoration: underline;
 }
 
@@ -70,7 +70,7 @@ header {
 
 .content {
   width: 1170px;
-  margin-left: 176px;
+  margin: 0 auto;
   padding: 35px 0;
 }
 
@@ -81,30 +81,29 @@ header {
 
 .content ul {
   font-size: 0;
+  padding: 30px 0;
 }
 
 .content ul li {
   display: inline-block;
-  width: 33%;
-  height: 350px;
+  width: 384px;
   list-style: none;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
   padding: 28px 12px 12px 12px;
 }
 
-.block-top{
-  height: 175px;
+.block-top {
   width: 100%;
   background-repeat: no-repeat;
 }
 
-.block-top a {
+.block-top button {
   display: inline-block;
   padding: 20px;
 }
 
 .block-bottom {
-  padding: 3px 10px;
-  border-top: none;
+  padding: 5px 10px;
 }
 
 .block-bottom h2 {
@@ -132,17 +131,17 @@ header {
 .nav-link {
   padding: 65px 0;
   text-align: center;
-  letter-spacing: 4px;
 }
 
 .nav-link a {
   text-decoration: underline;
+  padding-left: 48px;
 }
 
 footer {
   background-color: #3F51B5;
   color: #fff;
-  height: 50px;
+  padding: 30px 0;
 }
 
 .cop {
@@ -154,10 +153,3 @@ footer {
 
 /* unknown props */ 
 
-.block-bottom {
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-}
-
-nav a:first-child {
-  pointer-events: none;
-}
