--- a/public/views/css/homework-4/index.html
+++ b/public/views/css/homework-4/index.html
@@ -9,6 +9,177 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      
+    <div class="wrapper">
+      <header class="header">
+        <div class="header-top">
+          <div class="width">
+            <nav class="nav">
+              <a href="#">Home</a>
+              <a href="#">Gallery</a>
+              <a href="#">Prices</a>
+              <a href="#">About</a>
+              <a href="#">Contact</a>
+            </nav>
+            <div class="log">
+              <a href="#">Log in</a> /
+              <a href="#">Sign in</a>
+            </div>
+          </div>
+        </div>
+        <div class="header-bottom">
+          <p class="intro">Intro</p>
+        </div>
+      </header>
+      <div class="content">
+        <div class="width">
+          <h1 class="primary">Primary Title</h1>
+          <div class="container">
+            <div class="row">
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-top">
+                    <p class="card-top-text">Everest sunset</p>
+                  </div>
+                  <div class="card-bottom">
+                    <p class="card-bottom-title">Mountains</p>
+                    <p class="card-bottom-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <div class="card-bottom-links">
+                      <a href="#">share</a>
+                      <a href="#">Explone</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="load-link">Load more</a>
+        </div>
+      </div>
+      <footer class="footer">
+        <div class="width">
+          <div class="container">
+            <div class="row">
+              <div class="column">
+                <div class="block-one">
+                  <p>Private Policy</p>
+                  <p>Terms of use</p>
+                </div>
+              </div>
+              <div class="column">
+                <div class="block-two">
+                  <p>Blog</p>
+                  <p>Partners</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>  
   </body>
 </html>
