--- a/public/views/css/homework-4/puzzle.html
+++ b/public/views/css/homework-4/puzzle.html
@@ -11,7 +11,13 @@
 <body>
   <div class="container">
     <div class="red-square"></div>
-    <div class="green-rectangle"></div>
+    <!-- <div class="green-rectangle"></div> -->
+    <!-- <div class="red-rectangle"></div> -->
+     <!-- <div class="blue-rectangle"></div> -->
+    <!-- <div class="red-rectangle-two"></div>
+    <div class="yellow-square"></div> --> 
+    <!-- <div class="green-rectangle-two"></div> -->
+    <!-- <div class="blue-rectangle-two"></div>   -->
   </div>
 </body>
 </html>
