--- a/public/views/css/homework-3/css/style.css
+++ b/public/views/css/homework-3/css/style.css
@@ -86,15 +86,18 @@ header {
 
 .content ul li {
   display: inline-block;
-  width: 384px;
+  width: 350px;
   list-style: none;
+  margin: 16px 16px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
-  padding: 28px 12px 12px 12px;
 }
 
 .block-top {
-  width: 100%;
   background-repeat: no-repeat;
+}
+
+.block-top img {
+  width: 100%;;
 }
 
 .block-top button {
@@ -116,8 +119,8 @@ header {
   text-align: center;
   background-color: blue;
   color: white;
-  font-size: 18px;
-  padding: 12px 119px;
+  font-size: 23px;
+  padding: 14px 54px;
   border-radius: 3px;
   display: block;
   margin-top:12px;
