--- a/public/views/css/homework-3/index.html
+++ b/public/views/css/homework-3/index.html
@@ -22,10 +22,10 @@
         <ul class="blocks">
           <li>
             <div class="block-top">
-              <!-- <button>
+              <button>
                 <img src="images/1.png" alt="" />
-              </button> -->
-              <img src="images/2.jpg" alt="" />
+              </button>
+              <img src="images/2.jpg" class="img" alt="" />
             </div> 
             <div class="block-bottom">
               <h2>Card name</h2>
@@ -35,10 +35,10 @@
           </li>
           <li>
             <div class="block-top">
-              <!-- <button>
+              <button>
                   <img src="images/1.png" alt="" />
-              </button> -->
-              <img src="images/2.jpg" alt="" />
+              </button>
+              <img src="images/2.jpg" class="img" alt="" />
             </div> 
             <div class="block-bottom">
               <h2>Card name</h2>
@@ -48,10 +48,10 @@
           </li>
           <li>
             <div class="block-top">
-              <!-- <button>
+              <button>
                 <img src="images/1.png" alt="" />
-              </button> -->
-              <img src="images/2.jpg" alt="" />
+              </button>
+              <img src="images/2.jpg" class="img" alt="" />
             </div> 
             <div class="block-bottom">
               <h2>Card name</h2>
@@ -61,10 +61,10 @@
           </li>
           <li>
             <div class="block-top">
-              <!-- <button>
+              <button>
                 <img src="images/1.png" alt="" />
-              </button> -->
-              <img src="images/2.jpg" alt="" />
+              </button>
+              <img src="images/2.jpg" class="img" alt="" />
             </div> 
             <div class="block-bottom">
               <h2>Card name</h2>
@@ -74,10 +74,10 @@
           </li>
           <li>
             <div class="block-top">
-              <!-- <button>
+              <button>
                 <img src="images/1.png" alt="" />
-              </button> -->
-              <img src="images/2.jpg" alt="" />
+              </button>
+              <img src="images/2.jpg" class="img" alt="" />
             </div> 
             <div class="block-bottom">
               <h2>Card name</h2>
@@ -87,10 +87,10 @@
           </li>
           <li>
             <div class="block-top">
-              <!-- <button>
+              <button>
                 <img src="images/1.png" alt="" />
-              </button> -->
-              <img src="images/2.jpg" alt="" />
+              </button>
+              <img src="images/2.jpg" class="img" alt="" />
             </div> 
             <div class="block-bottom">
               <h2>Card name</h2>
@@ -101,9 +101,9 @@
         </ul>
         <nav class="nav-link">
           <span>1</span>
-          <a href="#">2</a>
-          <a href="#">3</a>
-          <a href="#">4</a>
+          <a href="#" class="link">2</a>
+          <a href="#" class="link">3</a>
+          <a href="#" class="link">4</a>
         </nav>
       </div>
       <footer>
