--- a/public/views/css/homework-3/css/style.css
+++ b/public/views/css/homework-3/css/style.css
@@ -63,6 +63,10 @@ footer {
   text-decoration: underline;
 }
 
+.active {
+  text-decoration: underline;
+}
+
 header {
   background-color: rgb(11, 15, 240);
   display: fixed;
@@ -86,27 +90,28 @@ header {
 
 .content ul li {
   display: inline-block;
-  width: 350px;
+  width: 30%;
   list-style: none;
   margin: 16px 16px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
 .block-top {
-  background-repeat: no-repeat;
+  position: relative;
 }
 
-.block-top img {
+.block-top .img {
   width: 100%;;
 }
 
 .block-top button {
   display: inline-block;
+  position: absolute;
   padding: 20px;
 }
 
 .block-bottom {
-  padding: 5px 10px;
+  padding: 16px 10px;
 }
 
 .block-bottom h2 {
@@ -136,7 +141,11 @@ header {
   text-align: center;
 }
 
-.nav-link a {
+.nav-link span:hover {
+  color: #3F51B5;
+}
+
+.link {
   text-decoration: underline;
   padding-left: 48px;
 }
