--- a/public/views/css/homework-3/css/style.css
+++ b/public/views/css/homework-3/css/style.css
@@ -51,16 +51,8 @@ footer {
   padding: 0 12px;
 }
 
-.nav a:hover {
-  background-color: rgb(79, 62, 231);
-}
-
-.nav a:active {
-  background-color: rgb(8, 0, 77);
-}
-
 .active:hover {
-  text-decoration: underline;
+  background-color: black;
 }
 
 .active {
@@ -69,7 +61,6 @@ footer {
 
 header {
   background-color: rgb(11, 15, 240);
-  display: fixed;
 }
 
 .content {
@@ -90,10 +81,9 @@ header {
 
 .content ul li {
   display: inline-block;
-  width: 30%;
+  width: 33.3%;
   list-style: none;
-  margin: 16px 16px;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+  padding: 12px 12px;
 }
 
 .block-top {
@@ -101,7 +91,7 @@ header {
 }
 
 .block-top .img {
-  width: 100%;;
+  width: 100%;
 }
 
 .block-top button {
@@ -112,6 +102,7 @@ header {
 
 .block-bottom {
   padding: 16px 10px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
 .block-bottom h2 {
@@ -131,6 +122,14 @@ header {
   margin-top:12px;
 }
 
+.block-bottom a:hover {
+  background-color: rgb(38, 38, 207);
+}
+
+.block-bottom a:active {
+  background-color: rgb(3, 3, 146);
+}
+
 .block-bottom p {
   font-size: 18px;
   padding-top: 13px;
@@ -139,10 +138,6 @@ header {
 .nav-link {
   padding: 65px 0;
   text-align: center;
-}
-
-.nav-link span:hover {
-  color: #3F51B5;
 }
 
 .link {
