--- a/public/views/css/homework-3/index.html
+++ b/public/views/css/homework-3/index.html
@@ -99,12 +99,12 @@
             </div>
           </li>
         </ul>
-        <nav class="nav-link">
-          <span>1</span>
-          <a href="#" class="link">2</a>
-          <a href="#" class="link">3</a>
-          <a href="#" class="link">4</a>
-        </nav>
+        <div class="pagination">
+          <span class="pagination-item pagination-item-active">1</span>
+          <a class="pagination-item" href="#">2</a>
+          <a class="pagination-item" href="#">3</a>
+          <a class="pagination-item" href="#">4</a>
+        </div>
       </div>
       <footer>
         <p class="cop">Copyright 2018</p>
