--- a/public/views/css/homework-3/css/style.css
+++ b/public/views/css/homework-3/css/style.css
@@ -28,7 +28,6 @@ footer {
   flex-shrink: 0;
 }
 
-
 /* пример фонового цвета - background-color: #3F51B5; */
 /* тень блока - box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2); */
 /* закругленные углы у кнопок - border-radius: 3px; */
@@ -44,18 +43,18 @@ footer {
   line-height: 50px;
 }
 
-.nav a{
+.nav a {
   color: white;
   display: inline-block;
   text-align: center;
   padding: 0 12px;
 }
 
-.active:hover {
+ .nav .active:hover {
   background-color: black;
 }
 
-.active {
+.nav .active {
   text-decoration: underline;
 }
 
@@ -83,7 +82,8 @@ header {
   display: inline-block;
   width: 33.3%;
   list-style: none;
-  padding: 12px 12px;
+  padding: 0px 12px;
+  margin-bottom: 12px;
 }
 
 .block-top {
@@ -95,8 +95,9 @@ header {
 }
 
 .block-top button {
-  display: inline-block;
   position: absolute;
+  top: 0;
+  left: 0;
   padding: 20px;
 }
 
@@ -107,7 +108,6 @@ header {
 
 .block-bottom h2 {
   font-weight: normal;
-  padding-top: 22px;
   font-size: 29px;
 }
 
@@ -135,28 +135,31 @@ header {
   padding-top: 13px;
 }
 
-.nav-link {
+.pagination {
   padding: 65px 0;
   text-align: center;
 }
 
-.link {
+.pagination-item {
   text-decoration: underline;
   padding-left: 48px;
+}
+
+.pagination-item-active {
+  color: grey;
+  text-decoration: none;
 }
 
 footer {
   background-color: #3F51B5;
   color: #fff;
-  padding: 30px 0;
+  padding: 25px 0;
 }
 
 .cop {
   text-align: center;
-  padding-top: 12px;
+  padding-top: 4px;
 }
-
-
 
 /* unknown props */ 
 
