--- a/public/views/css/homework-4/puzzle.html
+++ b/public/views/css/homework-4/puzzle.html
@@ -10,14 +10,14 @@
 </head>
 <body>
   <div class="container">
-    <div class="red-square"></div>
-    <!-- <div class="green-rectangle"></div> -->
-    <!-- <div class="red-rectangle"></div> -->
-     <!-- <div class="blue-rectangle"></div> -->
-    <!-- <div class="red-rectangle-two"></div>
-    <div class="yellow-square"></div> --> 
-    <!-- <div class="green-rectangle-two"></div> -->
-    <!-- <div class="blue-rectangle-two"></div>   -->
-  </div>
+    <div class="square-indigo"></div>
+    <div class="rectangle-green"></div>
+    <div class="rectangle-red"></div>
+    <div class="square-orange"></div>
+    <div class="rectangle-blue"></div>
+    <div class="rectangle-red-again"></div>
+    <div class="rectangle-green-again"></div>
+    <div class="rectangle-blue-again"></div>
+ </div>
 </body>
 </html>
