--- a/public/views/css/homework-4/index.html
+++ b/public/views/css/homework-4/index.html
@@ -3,18 +3,209 @@
   <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,td,th{text-align:left;font-weight:400;vertical-align:middle}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}button,input,optgroup,select,textarea{background:0 0;border:0;padding:0;margin:0;font:inherit;color:inherit;box-shadow:none}button{height:auto;cursor:pointer}button:focus{outline:0}button::-moz-focus-inner{outline:0;border:0;padding:0}
+    </style>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
-        <nav class="nav">
-          <a href="#" class="active">Home</a>
-          <a href="#">Gallery</a>
-          <a href="#"></a>
-          <a href="#"></a>
-          <a href="#"></a>
-        </nav>
+        <div class="container">
+          <nav class="nav">
+            <a href="#" class="nav-item nav-item-active">Home</a>
+            <a href="#" class="nav-item">Gallery</a>
+            <a href="#" class="nav-item">Prices</a>
+            <a href="#" class="nav-item">About</a>
+            <a href="#" class="nav-item">Contact</a>
+          </nav>
+          <div class="aut">
+            <a href="#" class="aut-item">log in /</a> 
+            <a href="#" class="aut-item">Sing in</a>
+          </div>
+        </div>
       </header>
+      <div class="content">
+        <div class="bg-image">
+          <h1 class="bg-image-title">Intro</h1>
+        </div>
+        <div class="content-section">
+          <div class="container">
+            <h2 class="content-title">Primary title</h2>
+            <div class="row">
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="card">
+                  <div class="card-image">
+                    <h2 class="card-title">Everest sunset</h2>
+                  </div>
+                  <div class="card-content">
+                    <h2 class="card-content-title">Mountains</h2>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam facilis provident quod?</p>
+                    <div class="card-buttons clearfix">
+                      <div class="card-button">
+                        <button class="button button-size-default button-theme-green" type="button">Share</button>
+                      </div>
+                      <div class="card-button">
+                        <a href="#" class="button button-size-default button-theme-green">Explore</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="button-load">
+                <button class="button button-size-default button-style" type="button">load more</button>
+              </div>
+          </div>
+        </div>  
+      </div>
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="column">
+              <a href="#" class="footer-links">Privat policy</a>
+              <a href="#" class="footer-links">Terms of use</a>
+            </div>
+            <div class="column">
+              <a href="#" class="footer-links">Blog</a>
+              <a href="#" class="footer-links">Patherns</a>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
