--- a/public/views/css/homework-4/index.html
+++ b/public/views/css/homework-4/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="container">
+        <div class="container clearfix">
           <nav class="nav">
             <a href="#" class="nav-item nav-item-active">Home</a>
             <a href="#" class="nav-item">Gallery</a>
