--- a/public/views/css/homework-5/index.html
+++ b/public/views/css/homework-5/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1 class="header__title">header</h1>
+        header
       </header>
       <div class="content">
         <div class="container">
@@ -44,13 +44,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -58,10 +58,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -71,13 +71,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -85,10 +85,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -98,13 +98,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -112,10 +112,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -125,13 +125,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -139,10 +139,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -152,13 +152,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -166,10 +166,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -179,13 +179,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -193,10 +193,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -206,13 +206,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -220,10 +220,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -233,13 +233,13 @@
                   <div class="column col-mb-6 col-md-4">
                     <div class="card">
                       <div class="card__inner">
-                        <div class="card__image bg__image">
-                          <h2 class="card__image--title">
+                        <div class="card__image bg-image">
+                          <h2 class="card__title">
                             Everest sunset
                           </h2>
                         </div>
                         <div class="card__content">
-                          <h3 class="card__title">
+                          <h3 class="card__text">
                             Mountains
                           </h3>
                           <p class="card__desc">
@@ -247,10 +247,10 @@
                           </p>
                           <div class="card__buttons clearfix">
                             <div class="card__button">
-                              <button class="button button__size--default button__theme--green" type="button">Share</button>
+                              <button class="button button--size button--theme" type="button">Share</button>
                             </div>
                             <div class="card__button">
-                              <a href="#" class="button button__size--default button__theme--green">Explore</a>
+                              <a href="#" class="button button--size button--theme">Explore</a>
                             </div>
                           </div>
                         </div>
@@ -264,7 +264,7 @@
         </div>
       </div>  
       <footer class="footer">
-        <h2 class="footer__title">footer</h2>
+        footer
       </footer>
     </div>
   </body>
